k8s/base/network/allow-api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-gateway-ingress
  namespace: automatic-system
spec:
  podSelector:
    matchLabels:
      app: api-gateway

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 8081
