k8s/base/network/allow-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-ingress
  namespace: automatic-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}
